<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SlotDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">


    <EditText
        android:id="@+id/slot_title_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/time_slot_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toTopOf="@+id/slot_description_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/slot_description_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/slot_date_and_time_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_title_edit" />

    <TextView
        android:id="@+id/slot_date_and_time_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:hint="@string/_05_05_2022"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slot_description_edit"
        app:layout_constraintBottom_toTopOf="@id/slot_duration_edit"/>

    <Button
        android:id="@+id/chooseDateAndTime"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set_date_and_time"
        android:textSize="11sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/slot_duration_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@id/slot_date_and_time_edit"
        app:layout_constraintTop_toBottomOf="@+id/slot_description_edit"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/slot_duration_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseDateAndTime" />

    <EditText
        android:id="@+id/slot_location_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slot_duration_edit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/slot_description_edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/slot_location_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>