<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SlotDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/star_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/slot_description"
                app:layout_constraintEnd_toStartOf="@id/slot_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="4dp"
                app:srcCompat="@drawable/ic_baseline_star_24"/>

            <TextView
                android:id="@+id/slot_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time_slot_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                app:layout_constraintBottom_toTopOf="@+id/slot_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/star_fill"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/slot_description"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@id/slot_date_and_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slot_title" />

            <TextView
                android:id="@+id/slot_date_and_time"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/_05_05_2022"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slot_description" />

            <TextView
                android:id="@+id/slot_duration"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slot_date_and_time" />

            <TextView
                android:id="@+id/slot_location"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@id/slot_credits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slot_duration"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/slot_credits"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/credits"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toTopOf="@id/slot_skill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slot_location"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/slot_skill"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/skill"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toBottomOf="@id/chat_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slot_location"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/chat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slot_skill" />

            <Button
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chat_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slot_skill"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>